删除分享，留下注册

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             height: 100%;
             background-color: pink;
         }
+        .card-content-inner ol li{
+            line-height: 30px;
+        }
     </style>
 
 
@@ -61,10 +64,10 @@
                 <span class="icon icon-home"></span>
                 <span class="tab-label">首页</span>
             </a>
-            <!--<a class="tab-item" href="#signup">
+            <a class="tab-item" href="#signup">
                 <span class="icon icon-me"></span>
                 <span class="tab-label">留个信</span>
-            </a>-->
+            </a>
             <a class="tab-item" href="#contactbobo">
                 <span class="icon icon-phone"></span>
                 <span class="tab-label">联系波波</span>
@@ -73,10 +76,10 @@
                 <span class="icon icon-me"></span>
                 <span class="tab-label">驾考流程</span>
             </a>
-            <a class="tab-item" href="#share">
+            <!--<a class="tab-item" href="#share">
                 <span class="icon icon-share"></span>
                 <span class="tab-label">分享</span>
-            </a>
+            </a>-->
         </nav>
         <div class="content">
             <!-- Slider -->
@@ -114,23 +117,27 @@
                 <div class="card">
                     <div class="card-header">报名条件</div>
                     <div class="card-content">
-                        <div class="card-content-inner baomingtiaojian">
-                            <h4>c1（小汽车）：18－70周岁；</h4>
-                            <h4>c2（自动档小汽车）：18－70周岁，左下肢残疾人士也可报名；</h4>
-                            <h4>视力：两眼视力不低于标准视力表0.7或对数视力表4.9（允许矫正）；</h4>
-                            <h4>辨色力：无赤绿色盲；</h4>
-                            <h4>听力：两耳分别距音叉50厘米能辨别声源方向；</h4>
-                            <h4>身体动力能力：四肢、躯干、颈部运动能力正常。</h4>
+                        <div class="card-content-inner">
+                            <ol>
+                                <li>c1（小汽车）：18－70周岁；</li>
+                                <li>c2（自动档小汽车）：18－70周岁，左下肢残疾人士也可报名；</li>
+                                <li>视力：两眼视力不低于标准视力表0.7或对数视力表4.9（允许矫正）；</li>
+                                <li>辨色力：无赤绿色盲；</li>
+                                <li>听力：两耳分别距音叉50厘米能辨别声源方向；</li>
+                                <li>身体动力能力：四肢、躯干、颈部运动能力正常。</li>
+                            </ol>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">报名资料</div>
                     <div class="card-content">
-                        <div class="card-content-inner baomingziliao">
-                            <h4>宁波市户口，需备身份证原件。</h4>
-                            <h4>非宁波市户口，需备身份证原件。</h4>
-                            <h4>现役军人及武警官兵，个人身份证明(军官证或士兵证)或团级以上个人身份证明(含现住址)。</h4>
+                        <div class="card-content-inner">
+                            <ol>
+                                <li>宁波市户口，需备身份证原件。</li>
+                                <li>非宁波市户口，需备身份证原件。</li>
+                                <li>现役军人及武警官兵，个人身份证明(军官证或士兵证)或团级以上个人身份证明(含现住址)。</li>
+                            </ol>
                         </div>
                     </div>
                 </div>
@@ -138,7 +145,7 @@
         </div>
     </div>
 
-    <!--<div class="page" id="signup">
+    <div class="page" id="signup">
         <header class="bar bar-nav">
             <h1 class='title'>留下您的联系方式，波哥会联系您哦</h1>
         </header>
@@ -146,6 +153,10 @@
             <a class="tab-item" href="#index">
                 <span class="icon icon-home"></span>
                 <span class="tab-label">首页</span>
+            </a>
+            <a class="tab-item" href="#signup">
+                <span class="icon icon-me"></span>
+                <span class="tab-label">留个信</span>
             </a>
             <a class="tab-item" href="#contactbobo">
                 <span class="icon icon-phone"></span>
@@ -155,15 +166,15 @@
                 <span class="icon icon-me"></span>
                 <span class="tab-label">驾考流程</span>
             </a>
-            <a class="tab-item" href="#share">
+            <!--<a class="tab-item" href="#share">
                 <span class="icon icon-share"></span>
                 <span class="tab-label">分享</span>
-            </a>
+            </a>-->
         </nav>
         <div class="content">
             <div class="list-block">
                 <ul>
-                    &lt;!&ndash; Text inputs &ndash;&gt;
+                    <!-- Text inputs -->
                     <li>
                         <div class="item-content">
                             <div class="item-media"><i class="icon icon-form-email"></i></div>
@@ -231,7 +242,7 @@
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
 
     <div class="page" id="contactbobo">
         <header class="bar bar-nav">
@@ -242,6 +253,10 @@
                 <span class="icon icon-home"></span>
                 <span class="tab-label">首页</span>
             </a>
+            <a class="tab-item" href="#signup">
+                <span class="icon icon-me"></span>
+                <span class="tab-label">留个信</span>
+            </a>
             <a class="tab-item active" href="#contactbobo">
                 <span class="icon icon-phone"></span>
                 <span class="tab-label">联系波波</span>
@@ -250,10 +265,10 @@
                 <span class="icon icon-me"></span>
                 <span class="tab-label">驾考流程</span>
             </a>
-            <a class="tab-item" href="#share">
+            <!--<a class="tab-item" href="#share">
                 <span class="icon icon-share"></span>
                 <span class="tab-label">分享</span>
-            </a>
+            </a>-->
         </nav>
         <div class="content">
             <div class="page-index">
@@ -329,6 +344,10 @@
                 <span class="icon icon-home"></span>
                 <span class="tab-label">首页</span>
             </a>
+            <a class="tab-item" href="#signup">
+                <span class="icon icon-me"></span>
+                <span class="tab-label">留个信</span>
+            </a>
             <a class="tab-item" href="#contactbobo">
                 <span class="icon icon-phone"></span>
                 <span class="tab-label">联系波波</span>
@@ -337,10 +356,10 @@
                 <span class="icon icon-me"></span>
                 <span class="tab-label">驾考流程</span>
             </a>
-            <a class="tab-item" href="#share">
+            <!--<a class="tab-item" href="#share">
                 <span class="icon icon-share"></span>
                 <span class="tab-label">分享</span>
-            </a>
+            </a>-->
         </nav>
         <div class="content">
             <div class="page-index">
@@ -384,5 +403,65 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+
+<!--<script type="text/javascript">
+    var imgUrl = "http://www.baidu.com/img/bdlogo.gif";
+    var lineLink = "http://www.baidu.com";
+    var descContent = '亲子游来玩了';
+    var shareTitle = '我的标题';
+    var appid = '';
+    function shareFriend() {
+        WeixinJSBridge.invoke('sendAppMessage', {
+            "appid": appid,
+            "img_url": imgUrl,
+            "img_width": "200",
+            "img_height": "200",
+            "link": lineLink,
+            "desc": descContent,
+            "title": shareTitle
+        }, function (res) {
+
+        })
+    }
+
+    function shareTimeline() {
+        WeixinJSBridge.invoke('shareTimeline', {
+            "img_url": imgUrl,
+            "img_width": "200",
+            "img_height": "200",
+            "link": lineLink,
+            "desc": descContent,
+            "title": shareTitle
+        }, function (res) {
+
+        });
+    }
+
+    function shareWeibo() {
+        WeixinJSBridge.invoke('shareWeibo', {
+            "content": descContent,
+            "url": lineLink,
+        }, function (res) {
+
+        });
+    }
+
+    // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
+    document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+        // 发送给好友
+        WeixinJSBridge.on('menu:share:appmessage', function (argv) {
+            shareFriend();
+        });
+        // 分享到朋友圈
+        WeixinJSBridge.on('menu:share:timeline', function (argv) {
+            shareTimeline();
+        });
+        // 分享到微博
+        WeixinJSBridge.on('menu:share:weibo', function (argv) {
+            shareWeibo();
+        });
+    }, false);
+
+</script>-->
 </body>
 </html>
